resources/ews/ewsresource.h
@@ -126,6 +126,7 @@ private Q_SLOTS:
     void authFailed(const QString &error);
     void requestAuthFailed();
     void emitReadyStatus();
+    void adjustRootCollectionName(const QString &newName);
 public Q_SLOTS:
     Q_SCRIPTABLE void sendMessage(const QString &id, const QByteArray &content);
 Q_SIGNALS:
